--- a/main.css
+++ b/main.css
@@ -9,6 +9,9 @@ h1{
 	padding-top: 8rem;
 	padding-bottom: 2rem;
 }
+h2{
+	text-decoration: underline;
+}
 
 a
 {
@@ -24,7 +27,10 @@ input[type=checkbox] {
 	visibility: hidden;
     margin: -7px;
 }
-
+.fileLoader{
+	margin-left: 8rem;
+	padding-top: 2rem;
+}
 #todo-app {
     background: #ffffff;
     font-size: 18px;
@@ -33,7 +39,7 @@ input[type=checkbox] {
     padding: 12px;
     margin-top: 30px;
     position:absolute;
-    left:50%;
+    left:52%;
     margin-left: -212px;
 
     -webkit-border-radius: 5px;
